# rublogs

./: .env  Cargo.toml
migrations/2018-12-12-124034_create_users_and_posts/: down.sql  up.sql
migrations/2018-12-29-103430_post_user_updates/: down.sql  up.sql
migrations/2019-01-04-005952_image_add/: down.sql  up.sql
migrations/2019-01-04-012030_sub_title/: down.sql  up.sql
src/: connection.rs  db.rs  main.rs  model.rs  post.rs  schema.rs
static/: about.hbs  about.html  index.hbs  layout.hbs  nav.hbs  post.hbs  posts.hbs
static/error/: 404.hbs
