[package]
name = "rublogs"
version = "0.1.0"
authors = ["suhaschitade"]
publish = false

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres","chrono"] }
dotenv = "0.9.0"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
chrono = { version="0.4", features = ["serde"]}


[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates","serve","json"]
